<resources>
    <string name="app_name">FavoriteApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="backdrop_movie">Backdrop Movie</string>
    <string name="title_movies">Title Movies</string>
    <string name="popularity">Popularity</string>
    <string name="cast_image">Cast Image</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="detail_genre">detail genre</string>
    <string name="cast">Cast</string>
    <string name="empty_movie">Empty Movie</string>
    <string name="empty_tv_show">Empty Tv Show</string>
    <string name="change">Change</string>
    <string name="change_language">Change Language</string>
    <string name="AddFav">Added to Favorite</string>
    <string name="removeFav">Removed from Favorite</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="en">English</string>
    <string name="in">Indonesian</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="gradient">Gradient</string>
    <string name="language">Language</string>

</resources>
