<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="125dp"
        android:layout_height="250dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterCast"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cast_image"/>

        <TextView
            android:id="@+id/nameCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/roleCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/role"/>
    </LinearLayout>


</android.support.v7.widget.CardView>