<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/item_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/backdrop_movie"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="71dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/img_bgView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/gradient"
            android:contentDescription="@string/gradient"
            app:layout_constraintBottom_toTopOf="@+id/item_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/item_poster"
            app:layout_constraintTop_toTopOf="@+id/item_title"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/item_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorItem"
            android:contentDescription="@string/backdrop_movie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_movies"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/item_popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_poster" />


        <TextView
            android:id="@+id/item_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="188dp"
            android:layout_marginBottom="8dp"
            android:text="@string/popularity"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/item_view"
            app:layout_constraintStart_toEndOf="@+id/item_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/item_view"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>